# shortsgen

./: .dockerignore  .gitignore  README.md  RESTRUCTURE.md  TODO.md  data.json  notes.txt  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pyrightconfig.json  remotion.config.ts  sst-env.d.ts  sst.config.d.ts  sst.config.ts  sst.pyi  tsconfig.json
services/python-generator/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json  requirements.txt  resource.enc  sst.pyi
services/python-generator/configs/: claude.yaml  default.yaml  prototype.yaml  prototype2.yaml
services/python-generator/logs/: 2026-04-11_21-09-36.jsonl  2026-04-11_21-16-39.jsonl  2026-04-11_21-33-20.jsonl  2026-04-11_21-39-44.jsonl  2026-04-11_21-43-54.jsonl  2026-04-11_21-48-36.jsonl  2026-04-11_21-52-40.jsonl  2026-04-11_21-56-27.jsonl  2026-04-11_22-08-37.jsonl
services/python-generator/prompts/: short-script-system-prompt.md  source-breakdown-system-prompt.md  transcript-chunker-system-prompt.md
services/python-generator/prompts/eval/: judge-script-engagement.md  judge-script-payoff.md
services/python-generator/prompts/optimized/: short-script-system-prompt.textgrad-pilot.md
services/python-generator/references/ImprovementPill/: 0xv1UsPE9ug.md  0zY5BbMHsEY.md  1KhS0kx_cg8.md  1QMb9imw5UY.md  3SzBK6hufdg.md  4fLpYRRGaQ0.md  6sQsx0bbnO8.md  8i2NoOQzG6c.md  Ftzf7PdWf9Y.md  LBMW2U58Ny4.md  UwWJgnTrdVk.md  UycMF0bj5f8.md  fTUpCh_ycXI.md  (+6 more)
services/python-generator/scripts/: config_loader.py  entrypoint.sh  logger.py  models.py  path_utils.py  run.py  url_to_markdown.py
(+1048 files in other folders)
